# kokkos-kernels

./: CMakeLists.txt
cmake/: Dependencies.cmake  KokkosKernelsConfig.cmake.in  KokkosKernels_config.h.in  enabled_kernels.cmake  kokkos_wrappers.cmake
cmake/tribits/: tribits.cmake
example/: CMakeLists.txt
example/fenl/: CGSolve.hpp  CMakeLists.txt  fenl_functors.hpp  fenl_impl.hpp
example/hashmap_accumulator/: CMakeLists.txt
perf_test/: CMakeLists.txt
perf_test/graph/: CMakeLists.txt
perf_test/performance/: CMakeLists.txt
perf_test/sparse/: CMakeLists.txt  KokkosSparse_gs.cpp  KokkosSparse_spmv_autotune.cpp  KokkosSparse_spmv_struct_tuning.cpp
scripts/: generate_makefile.bash  test_all_sandia
src/: CMakeLists.txt  kokkoskernels_eti.cmake
src/blas/impl/: KokkosBlas1_abs_spec.hpp  KokkosBlas1_axpby_spec.hpp  KokkosBlas1_mult_spec.hpp  KokkosBlas1_nrm1_spec.hpp  KokkosBlas1_nrm2_spec.hpp  KokkosBlas1_nrm2w_spec.hpp  KokkosBlas1_nrminf_spec.hpp  KokkosBlas1_reciprocal_spec.hpp  KokkosBlas1_sum_spec.hpp  KokkosBlas1_update_spec.hpp  KokkosBlas2_gemv_spec.hpp  KokkosBlas3_gemm_spec.hpp
src/impl/generated_specializations_cpp/trsm/: KokkosBlas3_trsm_eti_spec_inst.cpp.in
src/sparse/: KokkosSparse_spmv.hpp
src/sparse/impl/: KokkosSparse_spmv_impl.hpp  KokkosSparse_spmv_spec.hpp  KokkosSparse_spmv_struct_spec.hpp
test_common/: CMakeLists.txt  KokkosKernels_WriteBinaryFromBinSrcDst.cpp
unit_test/: CMakeLists.txt
unit_test/serial/: CMakeLists.txt
