#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
#INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})


ADD_LIBRARY(kokkoskernels_test_common INTERFACE)
TARGET_INCLUDE_DIRECTORIES(kokkoskernels_test_common INTERFACE 
  $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}>
)

TRIBITS_ADD_EXECUTABLE(
  matrix_converter
  NOEXEPREFIX 
  SOURCES KokkosKernels_MatrixConverter.cpp   
)
TARGET_INCLUDE_DIRECTORIES(
  matrix_converter PRIVATE
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)
TARGET_LINK_LIBRARIES(matrix_converter ${KokkosKernels_LIB_TYPE} kokkoskernels)

TRIBITS_ADD_EXECUTABLE(
  write_binary
  NOEXEPREFIX
  SOURCES KokkosKernels_WriteBinaryFromBinSrcDst.cpp
)
TARGET_INCLUDE_DIRECTORIES(
  write_binary PRIVATE
  ${CMAKE_CURRENT_BINARY_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
)
TARGET_LINK_LIBRARIES(write_binary ${KokkosKernels_LIB_TYPE} kokkoskernels)

